Bug 38383 - fails to build cross gcc for target hppa64-hp-hpux11.00
Summary: fails to build cross gcc for target hppa64-hp-hpux11.00
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-03 16:05 UTC by Rainer Emrich
Modified: 2008-12-13 00:23 UTC (History)
1 user (show)

See Also:
Host: x86_64-unknown-linux-gnu
Target: hppa64-hp-hpux11.00
Build: x86_64-unknown-linux-gnu
Known to work:
Known to fail:
Last reconfirmed:


Attachments
possible patch (325 bytes, patch)
2008-12-03 16:09 UTC, Rainer Emrich
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Emrich 2008-12-03 16:05:28 UTC
fails to build because of a wrong LINK_GCC_C_SEQUENCE_SPEC definition in 
gcc/config/pa/pa64-hpux.h
The required library milli.a is hardcoded as /usr/lib/pa20_64/milli.a.
That doesn't work in the cross compiler case, becasue it has to be searched for in the sysroot.
Comment 1 Rainer Emrich 2008-12-03 16:09:33 UTC
Created attachment 16814 [details]
possible patch

That works for me. But someone has to verify that it doesn't cause regressions on native hp-ux bootstraps. I can't, no hardware.
Comment 2 John David Anglin 2008-12-13 00:15:38 UTC
Subject: Bug 38383

Author: danglin
Date: Sat Dec 13 00:14:15 2008
New Revision: 142729

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=142729
Log:
	PR bootstrap/38383
	* pa64-hpux.h (LINK_GCC_C_SEQUENCE_SPEC): Don't hardcode search path
	for the milli.a library.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/pa/pa64-hpux.h

Comment 3 John David Anglin 2008-12-13 00:19:21 UTC
Subject: Bug 38383

Author: danglin
Date: Sat Dec 13 00:18:00 2008
New Revision: 142734

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=142734
Log:
	PR bootstrap/38383
	* pa64-hpux.h (LINK_GCC_C_SEQUENCE_SPEC): Don't hardcode search path
	for the milli.a library.


Modified:
    branches/gcc-4_3-branch/gcc/ChangeLog
    branches/gcc-4_3-branch/gcc/config/pa/pa64-hpux.h

Comment 4 John David Anglin 2008-12-13 00:23:06 UTC
Fixed.