re PR bootstrap/38383 (fails to build cross gcc for target hppa64-hp-hpux11.00)

PR bootstrap/38383
	* pa64-hpux.h (LINK_GCC_C_SEQUENCE_SPEC): Don't hardcode search path
	for the milli.a library.

From-SVN: r142734